--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@heroicons/react": "^2.1.1",
+    "@headlessui/react": "1.7.18",
+    "@headlessui/tailwindcss": "0.2.0",
+    "@heroicons/react": "2.1.1",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.17",
