--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
-    "format:check": "prettier . --check",
-    "format:write": "prettier . --write",
+    "format": "prettier . ",
     "lint": "next lint",
     "start": "next start",
     "storybook": "storybook dev -p 6006 --no-open",
     "storybook:build": "storybook build",
     "test": "vitest",
-    "test:coverage": "vitest --coverage"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "1.7.18",
@@ -26,6 +25,9 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.0.0",
+    "@commitlint/config-conventional": "^19.0.0",
+    "@commitlint/cz-commitlint": "^19.0.0",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
@@ -36,24 +38,29 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.3.1",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "commitizen": "^4.3.0",
+    "commitlint": "^19.0.1",
+    "cz": "^1.8.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "husky": "^8.0.0",
     "jsdom": "^24.0.0",
-    "postcss": "^8",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.17",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   }
 }
