--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,15 @@
 {
+  "root": true,
+
+  "parser": "@typescript-eslint/parser",
+
   "extends": [
     "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
     "plugin:jest-dom/recommended",
     "plugin:storybook/recommended",
     "prettier"
-  ]
+  ],
+
+  "plugins": ["@typescript-eslint"]
 }
