--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
-    "format": "prettier . ",
+    "format": "prettier .",
     "lint": "next lint",
     "start": "next start",
     "storybook": "storybook dev -p 6006 --no-open",
     "storybook:build": "storybook build",
     "test": "vitest",
+    "types": "tsc --noEmit",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -41,6 +42,8 @@
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.3.1",
     "autoprefixer": "^10.0.1",
