--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.17",
     "tailwindcss": "^3.3.0",
