--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "dependencies": {
     "@headlessui/react": "1.7.18",
     "@headlessui/tailwindcss": "0.2.0",
-    "@heroicons/react": "2.1.1",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "zod": "3.22.4"
   },
