--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.18",
     "@headlessui/tailwindcss": "0.2.0",
+    "cva": "1.0.0-beta.1",
     "next": "14.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
