--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.18",
-    "@headlessui/tailwindcss": "0.2.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "cva": "1.0.0-beta.1",
     "next": "14.1.2",
     "react": "18.2.0",
