--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "next build",
     "dev": "next dev --turbo",
     "format": "prettier .",
-    "lint": "next lint",
+    "lint:javascript": "next lint",
+    "lint:secrets": "secretlint --maskSecrets **/*",
+    "lint:types": "tsc --noEmit",
+    "prepare": "husky",
     "start": "next start",
     "storybook": "storybook dev -p 6006 --no-open",
     "storybook:build": "storybook build",
-    "test": "vitest",
-    "types": "tsc --noEmit",
-    "prepare": "husky"
+    "test": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
@@ -33,6 +34,7 @@
     "@commitlint/cli": "^19.2.0",
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/cz-commitlint": "^19.2.0",
+    "@secretlint/secretlint-rule-preset-recommend": "^8.1.2",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
     "@storybook/addon-links": "^8.0.0",
@@ -68,6 +70,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "secretlint": "^8.1.2",
     "storybook": "^8.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
