--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "cva": "1.0.0-beta.1",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
