--- a/package.json
+++ b/package.json
@@ -27,54 +27,54 @@
     "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "5.0.1",
     "tailwind-merge": "^2.2.2",
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.0",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/cz-commitlint": "^19.2.0",
-    "@secretlint/secretlint-rule-preset-recommend": "^8.1.2",
-    "@storybook/addon-essentials": "^8.0.0",
-    "@storybook/addon-interactions": "^8.0.0",
-    "@storybook/addon-links": "^8.0.0",
-    "@storybook/blocks": "^8.0.0",
-    "@storybook/manager-api": "^8.0.0",
-    "@storybook/nextjs": "^8.0.0",
-    "@storybook/react": "^8.0.0",
-    "@storybook/test": "^8.0.0",
-    "@storybook/theming": "^8.0.0",
+    "@secretlint/secretlint-rule-preset-recommend": "^8.2.3",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/manager-api": "^8.0.8",
+    "@storybook/nextjs": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/test": "^8.0.8",
+    "@storybook/theming": "^8.0.8",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/node": "^20.11.28",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@testing-library/react": "^14.3.1",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.4.0",
-    "autoprefixer": "^10.4.18",
+    "@vitest/coverage-v8": "^1.5.0",
+    "autoprefixer": "^10.4.19",
     "commitizen": "^4.3.0",
-    "commitlint": "^19.2.0",
+    "commitlint": "^19.2.2",
     "cz": "^1.8.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-jest-dom": "^5.2.0",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
-    "postcss": "^8.4.36",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "secretlint": "^8.1.2",
-    "storybook": "^8.0.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "vitest": "^1.4.0"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "secretlint": "^8.2.3",
+    "storybook": "^8.0.8",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.0"
   }
 }
