--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "cva": "1.0.0-beta.1",
+    "howler": "2.2.4",
+    "mobx": "6.12.3",
+    "mobx-react-lite": "4.0.7",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "react": "18.2.0",
@@ -48,6 +51,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.1",
+    "@types/howler": "^2.2.11",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
